--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,7 +79,7 @@
 
         <activity
             android:name=".TakeExamActivity"
-            android:label="Take Exam"
+            android:label="Take Test"
             android:screenOrientation="unspecified"
             android:windowSoftInputMode="stateHidden"
             >
@@ -87,7 +87,7 @@
 
         <activity
             android:name=".ExamActivity"
-            android:label="Take Exam"
+            android:label="Take Test"
             android:screenOrientation="unspecified"
             android:windowSoftInputMode="stateHidden">
         </activity>
